--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,29 +1,49 @@
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
-}
 
 body {
-  background: #fafafa;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #333;
+  font: normal 2em/1.5em "Helvetica Neue", Arial, sans-serif;
+  color: #fff;
 }
 
-.hero-unit {
-  margin: 50px auto 0 auto;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
+button.btn {
+  margin-top: 40px;
+  background: #66bb6a;
+  border-radius: 4px;
 }
 
-.hero-unit h1 {
-  font-size: 60px;
-  line-height: 1;
-  letter-spacing: -1px;
+.first {
+    background-color: #66bb6a;
+  }
+
+.second, .fourth {
+    background-color: #424242;
+  }
+
+.third {
+    background-color: #a5d6a7;
+  }
+
+.fourth button {
+  margin-top: 20px;
+}
+
+p {
+  margin-bottom: 30px;
+}
+
+#fp-nav ul li a span {
+  background: #66bb6a;
+}
+
+img {
+  margin: 0 auto;
+}
+
+.cloud {
+  max-width: 100%;
+}
+
+.cloud2 {
+  max-width: 100%;
+  max-height: 100%;
+  padding-left: 50px;
 }
