--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -96,6 +96,16 @@ img {
   margin-top: 50px;
 }
 
+.card {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.carousel-item {
+  width: 350px !important;
+  margin-top: -100px;
+}
+
 /* animate.css*/
 
 .bounce {
@@ -123,6 +133,11 @@ img {
 .cloud-5 {
   animation-duration: 1s;
   animation-delay: 1s;
+}
+
+.carousel-item {
+  max-height: 100%;
+  max-width: 100%;
 }
 
 /* d3.js*/
